WexGit/Wex_DX/force-app/main/default/objects/Schedule__c/fields/Attendee__c.field-meta.xml
<CustomField>
    <fullName>Attendee__c</fullName>
    <label>Attendee</label>
    <referenceTo>Attendee__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Attendees1</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>