WexGit/Wex_DX/force-app/main/default/objects/Schedule__c/fields/bucket__c.field-meta.xml
<CustomField>
    <fullName>bucket__c</fullName>
    <formula>TEXT(Session__r.Session_Slot__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>bucket</label>
    <type>Text</type>
</CustomField>