WexGit/Wex_DX/force-app/main/default/objects/Schedule__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <formula>&quot;PM: &quot; + Session__r.PM__c + &quot;&lt;br/&gt;&quot;+ &quot;Facilitator: &quot; +  Session__r.Facilitator__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notes</label>
    <type>Text</type>
</CustomField>