WexGit/Wex_DX/force-app/main/default/objects/Schedule__c/fields/percent_full__c.field-meta.xml
<CustomField>
    <fullName>percent_full__c</fullName>
    <formula>(Session__r.Total_Registered_Attendees__c / Session__r.Max_Capacity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>percent full</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>