WexGit/Wex_DX/force-app/main/default/objects/Schedule__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <label>Session</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>