WexGit/Wex_DX/force-app/main/default/objects/Schedule__c/fields/Session_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_Date__c</fullName>
    <inlineHelpText>Choose the date of the session</inlineHelpText>
    <label>Session Date</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1/21/2015</fullName>
            </value>
            <value>
                <fullName>1/22/2015</fullName>
            </value>
            <value>
                <fullName>1/23/2015</fullName>
            </value>
            <value>
                <fullName>1/24/2015</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>