WexGit/Wex_DX/force-app/main/default/objects/Schedule__c/fields/Session_Track__c.field-meta.xml
<CustomField>
    <fullName>Session_Track__c</fullName>
    <inlineHelpText>Choose a track category</inlineHelpText>
    <label>Session Track</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Track A</fullName>
            </value>
            <value>
                <fullName>Sales Track B</fullName>
            </value>
            <value>
                <fullName>Product Track A</fullName>
            </value>
            <value>
                <fullName>Product Track B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>