WexGit/Wex_DX/force-app/main/default/objects/Schedule__c/fields/Time_Slot__c.field-meta.xml
<CustomField>
    <fullName>Time_Slot__c</fullName>
    <label>Time Slot</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>8:30AM-10:00AM</fullName>
            </value>
            <value>
                <fullName>10:30AM-12:00PM</fullName>
            </value>
            <value>
                <fullName>1:00PM-2:00PM</fullName>
            </value>
            <value>
                <fullName>2:30PM-3:30PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>