WexGit/Wex_DX/force-app/main/default/objects/Schedule__c/fields/Track__c.field-meta.xml
<CustomField>
    <fullName>Track__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Track</label>
    <referenceTo>Track__c</referenceTo>
    <relationshipLabel>Schedules</relationshipLabel>
    <relationshipName>Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>