WexGit/Wex_DX/force-app/main/default/objects/Schedule__c/fields/Track_Category__c.field-meta.xml
<CustomField>
    <fullName>Track_Category__c</fullName>
    <formula>TEXT(Session_Track__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Track Category</label>
    <type>Text</type>
</CustomField>